# wayV

./: AUTHORS  BUGS  CHANGES  ChangeLog  INSTALL  NEWS  README  TODO  UPGRADING  mkinstalldirs
debian/: changelog  control  copyright  docs  menu  rules
doc/: HOWTO-wayv-config  HOWTO-wayv-keymap  Makefile  Makefile.am  Makefile.in  overview.txt  roadmap.txt  wayv.1  wayv.conf.1  wayv.conf.5
gtkfront/: wayvfront.glade
src/: DEFAULT.wkey  Makefile.am  Makefile.in  ai.c  ai.h  aimath.c  aimath.h  backend.c  defines.h  display.c  display.h  gesture.c  gesture.h  misc.c  misc.h  process.c  process.h  setup.c  setup.h  wayv.conf
